--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "^1.16.1",
-    "@tanstack/react-query": "^4.32.0",
-    "@types/node": "20.4.5",
-    "@types/react": "18.2.17",
+    "@tanstack/react-query": "^4.32.5",
+    "@types/node": "^20.4.7",
+    "@types/react": "^18.2.18",
     "@types/react-dom": "18.2.7",
-    "antd": "^5.7.3",
+    "antd": "^5.8.2",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -32,18 +32,18 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.1.0",
-    "@typescript-eslint/parser": "^6.1.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "commitlint-plugin-function-rules": "^2.0.2",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^5.0.0",
-    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react": "^7.33.1",
     "eslint-plugin-react-hooks": "^5.0.0-canary-7118f5dd7-20230705",
     "eslint-plugin-react-refresh": "^0.4.3",
     "husky": "^8.0.0",
     "lint-staged": "^13.2.3",
     "next-auth": "^4.22.3",
-    "prettier": "^3.0.0",
+    "prettier": "^3.0.1",
     "stylelint": "^15.10.2",
     "stylelint-config-property-sort-order-smacss": "^9.1.0",
     "stylelint-config-standard": "^34.0.0",
